# Expertflow

./: .gitattributes  .gitignore  DEPLOYMENT.md  PROJECT_LOG.md  README.md  SUBMISSION.md  THIRD_PARTY_NOTICES.md  expertflow_hackathon_spec_v0_11.md  pyproject.toml  vercel.json
configs/: baseline-prompt.txt  canonical-eligible-ngl10-cache.json  canonical-multilayer-cache.json  canonical-observer-runtime.json  canonical-one-layer-cache.json  expanded-canonical-84.json  llama-a7312ae-cuda128.json  model-artifacts.toml  p1-live-shadow.json  q4-physical-feasibility-corpus.json  runtime-artifacts.toml  trace-evidence-status.json
deployments/: max-context.json  max-performance.json  max-throughput.json
docs/: PRODUCT.md  product-reproduction.md  product-troubleshooting.md
native/router_probe/: CMakeLists.txt  live_cache_config.cpp  live_cache_config.h  main.cpp  test_live_cache_config.cpp
native/router_probe/import/: ggml-base.def  ggml.def  llama.def
public/: index.html
release/: expertflow-build-week.zip.sha256
release/expertflow-build-week/: .env.example  DEPLOYMENT.md  JUDGES.md  LICENSE  README.md  SHA256SUMS.json  dashboard.html  pyproject.toml
release/expertflow-build-week/deployments/: max-agentic.json
release/expertflow-build-week/docs/: BENCHMARKING.md
release/expertflow-build-week/docs/evidence/product-release/: agentic-demo.json  benchmark-report.md  release-state.json  replay-data.json  throughput-profile.json
release/expertflow-build-week/examples/: agentic_session.py  openai_client.py
release/expertflow-build-week/patches/llama.cpp/: 0001-feat-restore-disabled-static-CUDA-expert-island.patch  0002-feat-capture-exact-Q1b-token-NLL.patch  0003-feat-bound-static-islands-to-four-layers.patch  0004-feat-add-bounded-Q6-split-profiler.patch  0005-feat-expand-bounded-static-island-capacity.patch  0006-perf-precompute-static-layer-membership.patch
release/expertflow-build-week/runtime-source/: ggml-backend.cpp  manifest.json
release/expertflow-build-week/scripts/: judge-replay.ps1  live-demo.ps1  live-tps-demo.ps1  stop_expertflow.ps1  verify-release.ps1  verify_release.py
release/expertflow-build-week/src/expertflow/: __init__.py  artifacts.py  doctor.py  fetching.py  reporting.py
release/expertflow-build-week/src/expertflow/analysis/: expert_layout.py  heldout_breakdown.py  narrow_placement.py  profile.py  q6_inventory.py  q6_placement.py  replay.py
release/expertflow-build-week/src/expertflow/cli/: __init__.py  fetch_q4.py
release/expertflow-build-week/src/expertflow/predictor/: __init__.py  dataset.py  learned.py  live_shadow.py  metrics.py  models.py  runtime_artifact.py  temporal_dataset.py  temporal_live_shadow.py  temporal_metrics.py  temporal_models.py  temporal_shadow.py
release/expertflow-build-week/src/expertflow/product/: commands.py
release/expertflow-build-week/src/expertflow/quality/: analysis.py  dataset.py  manifest.py  q1b.py
release/expertflow-build-week/src/expertflow/runtime/: __init__.py  baseline.py
release/expertflow-build-week/src/expertflow/trace/: __init__.py  parity.py  schema.py
release/expertflow-build-week/submission/: architecture.md  demo-video-fallback-plan.md  demo-video-script-final.md  demo-video-shot-list-final.md  demo-video-slideshow.html  final-devpost-draft.md  judge-test-guide.md
scripts/: analyze_canonical_pilot.py  analyze_q1b_mmlu.py  analyze_q1b_nll.py  analyze_q6_layer_profile.py  analyze_q6_routing_workloads.py  analyze_q6_selected_static.py  assemble_q1b_results.py  benchmark_product_server.py  build_product_release.py  build_q6_placement_manifest.py  build_q6_runtime_final.cmd  build_release_runtime.ps1  build_router_probe.ps1  collect_expanded_canonical.py  collect_q6_routing_workloads.py  compare_narrow_placement.py  export_runtime_predictor.py  export_temporal_runtime_predictor.py  freeze_expanded_corpus.py  freeze_quality_manifest.py  inventory_q6_gguf.py  judge-replay.sh  live-tps-demo.ps1  measure_context_frontier.py  measure_q4_expert_layout.py  measure_stage0_frontier.ps1  prepare_quality_data.py  run_canonical_pilot.py  run_canonical_smoke.py  run_live_shadow_validation.py  run_multilayer_cache_ramp.py  run_next_layer_predictor.py  (+18 more)
(+347 files in other folders)
